Defined catalyst as list of Ingredients